--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -397,3 +397,121 @@
 [data-tour-elem='controls']{
   justify-content: center;
 }
+/*XmlEditor*/
+.add_tag_icon_outside{
+  cursor: pointer;
+  font-size: 14px;
+  margin: 0 5px;
+}
+.expand_tag{
+  cursor: pointer;
+  font-size: 14px;
+  margin: 0 5px;
+  vertical-align: sub;
+}
+.minimized_icon{
+  position: absolute;
+  z-index: 10;
+  span{
+    font-size: 13px;
+    line-height: 28px;
+    cursor: pointer;
+  }
+}
+.tag{
+  position: relative;
+  .name_open{
+    color: #ff5a71;
+    cursor: pointer;
+  }
+  .name_open:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    border-radius: 2px;
+  }
+  .name_close {
+    color: #ff5a71;
+  }
+  .bracket{
+    color: black;
+  }
+  .add_property_icon{
+    font-size: 14px;
+    cursor: pointer;
+    margin: 0 5px;
+    vertical-align: text-bottom;
+    line-height: 16px;
+  }
+  .delete_icon{
+    cursor: pointer;
+    font-size: 16px !important;
+    position: absolute;
+    margin-left: 8px;
+    top: -4px;
+  }
+  .add_tag_icon_inside{
+    cursor: pointer;
+    font-size: 16px !important;
+    position: absolute;
+    margin-left: -8px;
+    top: -4px;
+  }
+}
+.property{
+  cursor: pointer;
+  margin-left: 5px;
+  position: relative;
+  padding: 2px;
+  .name{
+    color: #5e805e;
+  }
+  .value{
+    color: #4770f5;
+  }
+  .remove_icon{
+    cursor: pointer;
+    font-size: 16px !important;
+    right: -10px;
+    top: -5px;
+    position: absolute;
+  }
+}
+.change_popup{
+  text-align: center;
+  top: 0;
+  min-width: 150px;
+  max-width: 150px;
+  right: -50px;
+  z-index: 5;
+  animation: APopupInputAppear .25s;
+  position: absolute;
+  transition: all 0.3s ease 0s;
+  border-radius: 3px;
+  padding: 8px;
+  box-shadow: rgba(0, 0, 0, .14) 0 0 0 0, #9f9f9f 0 1px 7px 1px, rgba(0, 0, 0, .22) 0 1px 1px 0;
+  background: white;
+  .close_icon{
+    position: absolute;
+    right: 2px;
+    top: 2px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  .radio_group{
+    height: 25px;
+  }
+  .radio_button{
+    margin-right: 10px;
+    float: left;
+    margin-bottom: 10px !important;
+  }
+}
+.change_tag_popup{
+  @extend .change_popup;
+  min-width: 250px;
+  max-width: 250px;
+  left: 0;
+}
+.property:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  border-radius: 2px;
+}
