--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -739,6 +739,17 @@
     resize: none;
   }
 }
+.operator_iterator{
+  position: absolute;
+  top: 3px;
+  font-size: 12px;
+  padding: 0 4px;
+  cursor: default;
+  margin-left: -1px;
+}
+.operator_iterator{
+  box-shadow: rgb(159, 159, 159) 0 1px 3px 0;
+}
 
 @keyframes APopupInputAppear {
   from {
