--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -273,6 +273,7 @@
   }
 }
 .input_hierarchy{
+  color: black;
   position: absolute;
   width: 100%;
   height: 78px;
@@ -313,7 +314,6 @@
     transform: rotate(0deg);
   }
   .search_icon_disappear{
-    right: 260px;
     opacity: 0;
     transform: rotate(-360deg);
   }
