--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -260,6 +260,42 @@
 .select{
 
 }
+.select_option{
+  position: relative;
+  color: black;
+  cursor: default;
+  display: block;
+  font-size: inherit;
+  padding: 8px 12px;
+  width: 100%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  box-sizing: border-box;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  .convert{
+    position: absolute;
+    right: 5px;
+    top: 0;
+    line-height: 40px;
+    cursor: pointer;
+  }
+}
+.selected_option{
+  background-color: #2684FF;
+  color: white;
+}
+.select_option_hover:hover{
+  background-color: #DEEBFF;
+  color: black;
+}
+.option_invalid{
+  color: #eee;
+}
 
 @keyframes AAppearInput {
   from {
