[Improved] OC-160 #comment improved tooltips and tab navigation #time 8h

--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -13,6 +13,7 @@
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 
+$ERROR_COLOR: #c92727;
 $FOCUS_BOX_SHADOW: 0 0 0 0.2rem rgba(38,143,255,.5);
 $INPUT_SELECT_COLOR: #0062cc;
 $BUTTON_COLOR: #007bff;
