--- a/src/frontend/app/themes/default/general/change_component.scss
+++ b/src/frontend/app/themes/default/general/change_component.scss
@@ -77,7 +77,7 @@
   text-align: center;
   padding: 0 30px 0 0;
   .message{
-    color: #d42222;
+    color: $ERROR_COLOR;
     position: relative;
   }
 }
@@ -1359,7 +1359,7 @@
   float: right;
 }
 .add_param_navigation {
-  float: right;
+  float: left;
 }
 .navigation_arrows {
   position: absolute;
@@ -1394,5 +1394,23 @@
   .draft_connection{
     max-height: 300px;
     overflow-y: auto;
+  }
+}
+
+//FormInputImage
+.form_input_image{
+  position: relative;
+  min-height: 84px;
+  .form_input_image_checkbox{
+    position: absolute;
+    top: 30px;
+    left: 88px;
+    z-index: 1;
+  }
+  .form_input_image_label{
+    font-size: 16px;
+    position: absolute;
+    width: 100px;
+    top: -3px;
   }
 }
