--- a/src/frontend/app/themes/default/layout/login.scss
+++ b/src/frontend/app/themes/default/layout/login.scss
@@ -77,7 +77,7 @@
   bottom: -24px !important;
   padding: 0 !important;
   .message{
-    color: #d42222;
+    color: $ERROR_COLOR;
     position: relative;
   }
 }
