--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -23,6 +23,11 @@
   border: none;
   padding: 0;
 }
+.disable_theme{
+  >span{
+    color: #eee;
+  }
+}
 .blue_theme{
   >span{
     color: $BUTTON_COLOR;
@@ -233,6 +238,15 @@
 }
 
 /*tooltip*/
+.tooltip_switch_loading{
+  font-family: $FONT_FAMILY;
+  margin: 0 !important;
+  min-height: 0 !important;
+  >div {
+    height: 20px;
+    width: 20px;
+  }
+}
 .tooltip_switch{
   label{
   font-size: $FONT_SIZE_SMALL;
