[Modified] OC-282 #comment changed regular expression #time 4h

--- a/src/frontend/app/themes/default/content/schedules/schedules.scss
+++ b/src/frontend/app/themes/default/content/schedules/schedules.scss
@@ -148,6 +148,7 @@
 .schedule_cron_exp{
   font-size: $INPUT_TEXT_SIZE;
   height: 38px !important;
+  padding-right: 25px !important;
 }
 
 .date_time_picker{
