--- a/src/frontend/app/themes/default/content/schedules/schedules.scss
+++ b/src/frontend/app/themes/default/content/schedules/schedules.scss
@@ -454,6 +454,14 @@
   width: 5%;
 }
 
+.cron_exp_example{
+  text-align: center;
+  font-size: 16px;
+  list-style-position: inside;
+  margin-top: 30px;
+  padding: 0;
+}
+
 .notification_change_event_type{
   .label{
     border: none;
