[Modified] OC-303 #comment implemented template update/cancel and invoker update/cancel with mode #time 24h

--- a/src/frontend/app/themes/default/content/app/app.scss
+++ b/src/frontend/app/themes/default/content/app/app.scss
@@ -20,12 +20,18 @@
   width: 100%;
 }
 
+.no_permission{
+  text-align: center;
+  padding-top: 100px;
+  color: $ERROR_COLOR;
+}
+
 .no_permission_title{
   font-family: $FONT_FAMILY;
   text-align: center;
   font-size: $FONT_SIZE_BIG;
   margin-top: 10px;
-  color: red;
+  color: $ERROR_COLOR;
 }
 
 .rejected_request_message{
