--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -13,6 +13,7 @@
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 
+$SUCCESS_COLOR: #359d47;
 $ERROR_COLOR: #c92727;
 $FOCUS_BOX_SHADOW: 0 0 0 0.2rem rgba(38,143,255,.5);
 $INPUT_SELECT_COLOR: #0062cc;
