[Modified] OC-317 #comment integrated ImageCropView component #time 4h

--- a/src/frontend/app/themes/default/general/list_of_components.scss
+++ b/src/frontend/app/themes/default/general/list_of_components.scss
@@ -119,6 +119,7 @@
 }
 
 .avatar{
+  cursor: pointer;
   float: right;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -133,6 +134,7 @@
 }
 
 .avatar_default{
+  cursor: pointer;
   font-size: 42px
 }
 
