--- a/src/frontend/app/themes/default/general/app.scss
+++ b/src/frontend/app/themes/default/general/app.scss
@@ -210,3 +210,15 @@
     cursor: pointer;
   }
 }
+.icon_dialog{
+  min-width: 750px;
+}
+.image_crop{
+  position: relative;
+}
+.upload_icon{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
