[Modified] OC-318 #comment integrated ReactCrop into upload image inputs #time 4h

--- a/src/frontend/app/themes/default/general/app.scss
+++ b/src/frontend/app/themes/default/general/app.scss
@@ -222,3 +222,10 @@
   right: 10px;
   cursor: pointer;
 }
+.image_crop_preview{
+  width: 50px;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  border-radius: 2px;
+}
