--- a/src/frontend/styles/material_icons.css
+++ b/src/frontend/styles/material_icons.css
@@ -31,7 +31,7 @@
 }
 
 .material-icons {
-    font-family: 'Material Icons';
+    font-family: 'Material Icons Round';
     font-weight: normal;
     font-style: normal;
     font-size: 24px;
