--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -50,7 +50,7 @@
 }
 .dark_theme{
   >span{
-    color: #777777;
+    color: #000;
     transition: background 0.8s;
   }
   >span:hover {
@@ -63,6 +63,27 @@
   }
 }
 .dark_theme:focus-within{
+  outline: none !important;
+  >span {
+    color: #7c7c7c;
+  }
+}
+
+.gray_theme{
+  >span{
+    color: #777;
+    transition: background 0.8s;
+  }
+  >span:hover {
+    color: #4d4d4d;
+  }
+  >span:active {
+    color: #7c7c7c;
+    background-size: 100%;
+    transition: background 0s;
+  }
+}
+.gray_theme:focus-within{
   outline: none !important;
   >span {
     color: #7c7c7c;
