[Modified] OC-320 #comment changed to 2d and implemented a pop up description for nodes #time 8h

--- a/src/frontend/app/themes/default/content/dashboard/dashboard.scss
+++ b/src/frontend/app/themes/default/content/dashboard/dashboard.scss
@@ -173,9 +173,10 @@
 }
 
 .connection_overview_widget{
-  canvas{
-    width: 100% !important;
-    height:auto !important;
+  height: 100%;
+  position: relative;
+  :first-child:first-child:focus{
+    outline: none !important;
   }
 }
 .widget_subheader{
