[Modified] OC-322 #comment modified icons and overview #time 5h

--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -18,7 +18,7 @@ $ERROR_COLOR: #c92727;
 $FOCUS_BOX_SHADOW: 0 0 0 0.2rem rgba(38,143,255,.5);
 $INPUT_SELECT_COLOR: #0062cc;
 $BUTTON_COLOR: #007bff;
-$FONT_FAMILY: 'Arial', sans-serif;
+$FONT_FAMILY: 'Open Sans', 'Arial', sans-serif;
 
 $FONT_SIZE_BIG: 24px;
 $FONT_SIZE_MEDIUM: 20px;
