--- a/src/frontend/app/themes/default/general/list_of_components.scss
+++ b/src/frontend/app/themes/default/general/list_of_components.scss
@@ -89,7 +89,8 @@
   font-family: $FONT_FAMILY;
   padding-top: 10px;
   float:left;
-  width: 70%;
+  width: 65%;
+  padding-left: 8px;
 }
 
 .title{
