--- a/src/frontend/app/themes/default/general/view_component.scss
+++ b/src/frontend/app/themes/default/general/view_component.scss
@@ -17,7 +17,7 @@
 
 .content{
   margin-bottom: 20px !important;
-  border: 1px dashed black;
+  border: 1px solid #eee;
   padding: 20px 30px;
   margin: 0 20px;
   min-height: 430px !important;
