[Modified] OC-320 #comment implementation of the layouts and designed #time 4h

--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -72,6 +72,14 @@
   top: 20px;
 }
 
+.item_refresh_button{
+  color: #000000;
+  right: 25px;
+  position: absolute;
+  cursor: pointer;
+  top: 20px;
+}
+
 .item_title_arrow{
   margin-top: 4px;
   width: 25px;
