--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -1,3 +1,5 @@
+@import "../../constants";
+
 .connection_editor{
   height: calc(100vh - 71px);
 }
@@ -79,12 +81,30 @@
 
 
 .business_layout {
-  :first-child:first-child:focus {
-    outline: none !important;
-  }
+  width: calc(80% - 0.5px);
+  height: 100%;
+  padding: 10px;
 }
 .program_layout{
   :first-child:first-child:focus{
     outline: none !important;
   }
+}
+
+.process_rect{
+  fill: #eee;
+  stroke: #b2b2b2;
+  stroke-width: 2;
+}
+.process_label{
+  font-family: $FONT_FAMILY;
+}
+.if_operator{
+  @extend .process_rect;
+  transform: rotate(45deg)  ;
+}
+
+.details{
+  text-align: center;
+  font-size: 32px;
 }
