[Modified] OC-324 #comment implemented draggable elements  #time 4h

--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -90,8 +90,15 @@
     outline: none !important;
   }
 }
+.process{
+  //cursor: move;
+  text{
+    pointer-events: none;
+  }
+}
 
 .process_rect{
+  cursor: move;
   fill: #eee;
   stroke: #b2b2b2;
   stroke-width: 2;
